# labpowerqt

./: .gitignore  .gitmodules  .ignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE_ICON.md  README.md
cmake/Modules/: FindQwt.cmake
database/: labpowerqt.sqlite
docker/: Dockerfile.ubuntu_trusty
docker/centos6/: Dockerfile
docker/centos7/: Dockerfile
forms/: CMakeLists.txt  aboutme.ui  mainwindow.ui  settingsdialog.ui
icons/: icons.qrc  license.txt
resources/: CMakeLists.txt  labpowerqt.desktop
src/: CMakeLists.txt  aboutme.cpp  aboutme.h  clickablelabel.cpp  clickablelabel.h  config.h.in  databasedef.h  dbconnector.cpp  dbconnector.h  devicewizard.cpp  devicewizard.h  devicewizardconnection.cpp  devicewizardconnection.h  devicewizardfinal.cpp  devicewizardfinal.h  devicewizardintro.cpp  devicewizardintro.h  devicewizardoptions.cpp  devicewizardoptions.h  displayarea.cpp  displayarea.h  floatingvaluesdialog.cpp  floatingvaluesdialog.h  global.h  koradscpi.cpp  koradscpi.h  koradspic.cpp  koradspic.h  labpowercontroller.cpp  labpowercontroller.h  labpowermodel.cpp  labpowermodel.h  log_instance.h  main.cpp  mainwindow.cpp  mainwindow.h  plottingarea.cpp  plottingarea.h  powersupplyscpi.cpp  powersupplyscpi.h  (+22 more)
todo/: done.txt  todo.txt
